[gd_scene load_steps=30 format=3 uid="uid://ot7y20rg1fqo"]

[ext_resource type="Texture2D" uid="uid://bvt0n20v88f7o" path="res://images/slaves/blob.png" id="1_fhcuj"]
[ext_resource type="Script" uid="uid://de24o14tl4lyy" path="res://scripts/slaves/slave_battle_node.gd" id="1_kr451"]
[ext_resource type="Texture2D" uid="uid://csw6m50jq853n" path="res://images/shapes/ellipse.png" id="3_m7i15"]
[ext_resource type="Texture2D" uid="uid://cu8nq4toon8uj" path="res://images/buffs/shield.png" id="4_lpdx8"]
[ext_resource type="Texture2D" uid="uid://18md1xgdubcr" path="res://images/buffs/blasphemy.png" id="5_gppif"]
[ext_resource type="Texture2D" uid="uid://6225b313atq2" path="res://images/icons/top.png" id="5_lpdx8"]
[ext_resource type="FontFile" uid="uid://bfebu5mjrc5yc" path="res://text/font/mainfont.ttf" id="5_ttqg8"]
[ext_resource type="Texture2D" uid="uid://dxa7wr6gumrrb" path="res://images/buffs/anvil.png" id="6_8sljb"]
[ext_resource type="Texture2D" uid="uid://dhmqbwahk027p" path="res://images/icons/middle.png" id="6_gppif"]
[ext_resource type="Texture2D" uid="uid://orgdll7utn86" path="res://images/icons/bottom.png" id="7_8sljb"]
[ext_resource type="Texture2D" uid="uid://ctm4vajohb528" path="res://images/shapes/arrow.png" id="11_5t34c"]
[ext_resource type="Texture2D" uid="uid://ds35lotmqbcya" path="res://images/icons/harm.png" id="11_7y33p"]
[ext_resource type="Texture2D" uid="uid://bsxa2pqrugam1" path="res://images/icons/heal.png" id="12_82wb0"]
[ext_resource type="Texture2D" uid="uid://hlcx8brhdh8g" path="res://images/icons/power_up.png" id="13_4thmk"]

[sub_resource type="Animation" id="Animation_lpdx8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.2, 0.2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Items:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimationSprites/Hit:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationSprites/Heal:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AnimationSprites/Heal:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AnimationSprites/Powerup:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("AnimationSprites/Powerup:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 16)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("AnimationSprites/Label:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_5t34c"]
resource_name = "crit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationSprites/Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(2, 2), Vector2(2, 2), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-40, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Items:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-40, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4thmk"]
resource_name = "healed"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationSprites/Heal:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.3, 0.3), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationSprites/Heal:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.5708]
}

[sub_resource type="Animation" id="Animation_8sljb"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-40, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Items:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-40, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationSprites/Hit:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.2, 0.2), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gppif"]
resource_name = "idle"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 12.2667)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.2, 0.152083)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Items:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 20)]
}

[sub_resource type="Animation" id="Animation_eb1g8"]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -63), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_82wb0"]
resource_name = "power_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationSprites/Powerup:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.2, 0.2), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationSprites/Powerup:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, 16), Vector2(-33.3333, -33.3333)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lpdx8"]
_data = {
&"RESET": SubResource("Animation_lpdx8"),
&"crit": SubResource("Animation_5t34c"),
&"healed": SubResource("Animation_4thmk"),
&"hit": SubResource("Animation_8sljb"),
&"idle": SubResource("Animation_gppif"),
&"jump": SubResource("Animation_eb1g8"),
&"power_up": SubResource("Animation_82wb0")
}

[sub_resource type="Animation" id="Animation_e010w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(70.6667, -23.3333)]
}

[sub_resource type="Animation" id="Animation_erpc0"]
resource_name = "bounce"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(102, -28.6667), Vector2(54.6667, -8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bl030"]
_data = {
&"RESET": SubResource("Animation_e010w"),
&"bounce": SubResource("Animation_erpc0")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7i15"]
bg_color = Color(0.301961, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8fbhv"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_eb1g8"]
font = ExtResource("5_ttqg8")
font_size = 40
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4thmk"]
font = ExtResource("5_ttqg8")
font_size = 32
font_color = Color(1, 0, 0, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="Blob" type="Node2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_kr451")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lpdx8")
}
autoplay = "idle"

[node name="ArrowAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Arrow")
libraries = {
&"": SubResource("AnimationLibrary_bl030")
}

[node name="CircleSelect" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_m7i15")

[node name="LineStart" type="Node2D" parent="CircleSelect"]
position = Vector2(125, 78.3333)
scale = Vector2(2.5, 2.5)

[node name="LineEnd" type="Node2D" parent="CircleSelect"]
position = Vector2(-125, 78.333)
scale = Vector2(2.5, 2.5)

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_fhcuj")

[node name="HPBar" type="ProgressBar" parent="."]
offset_left = -46.6667
offset_top = 50.0
offset_right = 46.3333
offset_bottom = 60.0
theme_override_styles/background = SubResource("StyleBoxFlat_m7i15")
theme_override_styles/fill = SubResource("StyleBoxFlat_8fbhv")
value = 100.0
show_percentage = false

[node name="Items" type="Node2D" parent="."]

[node name="Weapon" type="Node2D" parent="Items"]
position = Vector2(51, 3)
scale = Vector2(0.15, 0.15)

[node name="Hat" type="Node2D" parent="Items"]
position = Vector2(0, -56)
scale = Vector2(0.15, 0.15)

[node name="Trinket2" type="Node2D" parent="Items"]
position = Vector2(-44, 21)
scale = Vector2(0.1, 0.1)

[node name="Trinket1" type="Node2D" parent="Items"]
position = Vector2(-31, 31)
scale = Vector2(0.1, 0.1)

[node name="ClickableArea" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -42.0
offset_top = -28.0
offset_right = 39.0
offset_bottom = 43.0

[node name="Buffs" type="Node2D" parent="."]

[node name="shield" type="Sprite2D" parent="Buffs"]
visible = false
self_modulate = Color(1, 1, 1, 0.462745)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_lpdx8")

[node name="blasphemy" type="Sprite2D" parent="Buffs"]
visible = false
self_modulate = Color(1, 1, 1, 0.462745)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_gppif")

[node name="anvil" type="Sprite2D" parent="Buffs"]
visible = false
self_modulate = Color(1, 1, 1, 0.462745)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_8sljb")

[node name="Intention" type="Node2D" parent="."]
z_index = 1
position = Vector2(17.3333, -72.6667)

[node name="Icon" type="Sprite2D" parent="Intention"]
position = Vector2(-7.33333, 0)
scale = Vector2(0.15, 0.15)

[node name="TargetTop" type="Sprite2D" parent="Intention"]
visible = false
position = Vector2(-47.3333, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_lpdx8")
flip_h = true

[node name="TargetMiddle" type="Sprite2D" parent="Intention"]
visible = false
position = Vector2(-47.3333, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_gppif")
flip_h = true

[node name="TargetBottom" type="Sprite2D" parent="Intention"]
visible = false
position = Vector2(-47.3333, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_8sljb")
flip_h = true

[node name="Label" type="Label" parent="Intention"]
offset_left = -52.6667
offset_top = -9.33333
offset_right = 16.3333
offset_bottom = 36.6667
scale = Vector2(0.5, 0.5)
label_settings = SubResource("LabelSettings_eb1g8")
horizontal_alignment = 1

[node name="Stats" type="HBoxContainer" parent="."]
offset_left = -82.6667
offset_top = 63.3333
offset_right = 84.3333
offset_bottom = 81.3333
alignment = 1

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(70.6667, -23.3333)
rotation = 1.16124
scale = Vector2(0.1, 0.1)
texture = ExtResource("11_5t34c")

[node name="AnimationSprites" type="Node2D" parent="."]

[node name="Hit" type="Sprite2D" parent="AnimationSprites"]
position = Vector2(18, 3)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("11_7y33p")

[node name="Heal" type="Sprite2D" parent="AnimationSprites"]
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("12_82wb0")

[node name="Powerup" type="Sprite2D" parent="AnimationSprites"]
position = Vector2(16, 16)
rotation = -0.785398
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("13_4thmk")

[node name="Label" type="Label" parent="AnimationSprites"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -19.0
offset_right = 42.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(41, 18.333)
size_flags_horizontal = 4
text = "КРИТ!"
label_settings = SubResource("LabelSettings_4thmk")

[connection signal="button_down" from="ClickableArea" to="." method="_on_clickable_area_button_down"]
[connection signal="mouse_entered" from="ClickableArea" to="." method="_on_clickable_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickableArea" to="." method="_on_clickable_area_mouse_exited"]
